# ntfa-lk

./: LICENSE  README.md  pyproject.toml
examples/: NTFAvsDWT.py  run_example.py
src/ntfa_lk/: __init__.py  ntfa_lk.py
