[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntfa-lk"
version = "1.0.2"
description = "Novel Time-Frequency Analysis with Learnable Kernels (NTFA-LK): A minimal package with arbitrary kernels and learnable parameters"
readme = "README.md"
authors = [
    { name = "Skander Bensegueni", email = "skander.bensegueni@example.com" },
    { name = "Yunis Kahalan", email = "ykahalan@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9", "matplotlib>=3.4"
]

[project.urls]
Homepage = "https://github.com/ykahalan/ntfa-lk"
Repository = "https://github.com/ykahalan/ntfa-lk"
Documentation = "https://github.com/ykahalan/ntfa-lk/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]


